update footer to fix gap between footer and main container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
   width: 960px;
   height: 845px;
   font-family: Georgia, Times, "Times New Roman",serif;
-  margin: 0px 20px 0px 20px;
+  margin: 0px 0px 0px 0px;
 }
 
 h2 {
@@ -34,8 +34,8 @@ footer {
   background-color: #666666;
   height:100px;
   border-top: 10px solid #4aaaa5;
-  clear: both;
-  position: relative;
+  position: absolute;
+  width: 960px;
 }
 
 footer p {
@@ -65,17 +65,19 @@ a:hover{
 
 /*static on each page*/
 .container {
-  width: 960px;
-  height: 650px;
+  width: 100%;
+  height: 100%;
   margin: 0px auto;
-  background-color: #f0f0f0; 
+  background-color: #f0f0f0;
+
 }
 
 .left-side {
   width: 500px;
+  height: auto;
   background-color: #ffffff;
   margin: 25px 20px 0px 55px;
-  padding: 30px 20px 10px 20px;
+  padding: 30px 20px 30px 20px;
   float: left;
   border: 1px solid #ededed;
 }
@@ -198,8 +200,3 @@ a:hover{
 
 }
 
-
-/*playing with a sticky footer*/
-/*.footer-content {
-  flex: 1 0 auto;
-}*/
